(MSS-1620) Fix-PDP-layout-shifts-caused-by-product-images why: Fixed heigth width on OB

--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/product/detailRedesign.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/product/detailRedesign.scss
@@ -127,18 +127,18 @@
                             }
 
                             @media (max-width: $custom-sm4) {
-                                width: rem(345);
-                                height: rem(345); 
+                                width: rem(425);
+                                height: rem(510); 
                             }
 
                             @media (max-width: $small-screen-width375) {
-                                width: rem(295);
-                                height: rem(295);                                       
+                                width: rem(357);
+                                height: rem(450);                                       
                             }
 
                             @media (max-width: $small-screen-width) {
-                                width: rem(240);
-                                height: rem(240);                                       
+                                width: rem(320);
+                                height: rem(384);                                       
                             }
                         }  
                     }
